# Fox-Pinterest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: compliance.md  privacy-policy.md
fox_pinterest/: __init__.py  api.py  auth.py  cli.py  compliance.py  scheduler.py
